# language-server-network

./: ChangeLog.md  README.md  hie.yaml  install.sh  lsp-network.cabal  stack.yaml
.github/workflows/: ci.yml
app/: SimpleFileSync.hs  client.example.yaml  client.hs  server.example.yaml  server.hs
config/: simple_file_sync.yaml
src/LSP/: Network.hs
src/LSP/Network/: Logging.hs  Process.hs  TCP.hs  Types.hs  Utils.hs
