cabal-version:      2.2
name:               lsp-network
version:            0.2.0.0
synopsis:           A simple LSP wrapper that help you run server remotely.
description:
  Please see the README on Github at
  <https://github.com/4eUeP/language-server-network#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c)
author:             mu
maintainer:         laxcatmu@gmail.com
tested-with:        GHC ==9.2.8
category:           Development
homepage:           https://github.com/4eUeP/language-server-network
bug-reports:        https://github.com/4eUeP/language-server-network/issues
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/4eUeP/language-server-network

executable simple-file-sync
  main-is:          SimpleFileSync.hs
  hs-source-dirs:   app
  build-depends:
    , base             >=4.12.0.0 && <5
    , extra            ^>=1.7
    , filepattern      ^>=0.1
    , safe-exceptions  ^>=0.1
    , Z-Data           ^>=2.0
    , Z-IO             ^>=2.0
    , Z-YAML           ^>=0.3.5

  default-language: Haskell2010
  ghc-options:      -threaded -Wall -fno-warn-unused-do-bind

executable lsp-network-server
  main-is:          server.hs
  hs-source-dirs:   app
  build-depends:
    , base                  >=4.12.0.0 && <5
    , optparse-applicative  ^>=0.16
    , Z-Data                ^>=2.0
    , Z-IO                  ^>=2.0

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

executable lsp-network-client
  main-is:          client.hs
  hs-source-dirs:   app
  build-depends:
    , base                  >=4.12.0.0 && <5
    , optparse-applicative  ^>=0.16
    , Z-Data                ^>=2.0
    , Z-IO                  ^>=2.0
    , Z-YAML                ^>=0.3.5

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
